--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-       <h1>vai ser uma imagem aqui</h1>  
-<ul>
-    <li>Escola</li>
-    <li>Estudante</li>
-</ul> 
-    </header>
+  <header class="cabeçalho">
+    <img class="cabeçalho-imagem" src="alurastart logo.png" alt="logo da alurastart"> 
+    <ul class="cabeçalho-lista">
+     <li class="cabeçalho-lista-item">Escola</li>
+     <li class="cabeçalho-lista-item">Estudante</li>
+    </ul> 
+  </header>
   
 </body>
 </html>
