--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+''<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header class="cabeçalho">
@@ -19,10 +22,13 @@
     <div class="escola-div-conteudo">
       <h2 class="escola-titulo">Sobre a Escola</h2>
     <p class="escola-tecto-um">A escola Alura foi fundada em 2010 com o objetivo de ensinar Pensamento Computacional através da Programação.</p>
-    <p class="escola-texto-dois">A turma mais famosa é a Segunda Série D do CEPPAT. Uma turma diversa e engajada, as vezes, um pouco bagunceira, mas que entrega excelentes resultados!</p>
+    <p class="escola-texto-dois">A turma mais famosa é a Segunda Série A. Uma turma diversa e engajada, as vezes, um pouco bagunceira, mas que entrega excelentes resultados!</p>
     
   </div>
   <img class="escola-imagem" src="Ft.png" alt="Professora no quadro">
   </section>
+  <SEction class="estudante">
+    <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+  </SEction>
 </body>
 </html>
