--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-''<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -27,8 +27,15 @@
   </div>
   <img class="escola-imagem" src="Ft.png" alt="Professora no quadro">
   </section>
-  <SEction class="estudante">
-    <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
-  </SEction>
+<SEction class="estudante">
+  <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+  <div class="estudante-div"> 
+    <img class= "imagem-estudante" src="images.jpg" alt="foto estudante">
+    <h3 class="estudante-nome">Gato</h3>
+    <img class="logo" src="github.png" alt="github">
+    <img class="logo" src="instagram.png" alt="instagram">
+    <img class="logo" src="whatsapp.png" alt="whatsapp">
+  </div>
+</SEction>
 </body>
 </html>
