--- a/index.html
+++ b/index.html
@@ -29,13 +29,56 @@
   </section>
 <SEction class="estudante">
   <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+ <div class="estudante-todos">
+  <span></span>
   <div class="estudante-div"> 
-    <img class= "imagem-estudante" src="images.jpg" alt="foto estudante">
+    <img class= "estudante-imagem" src="images.jpg" alt="foto estudante">
     <h3 class="estudante-nome">Gato</h3>
-    <img class="logo" src="github.png" alt="github">
-    <img class="logo" src="instagram.png" alt="instagram">
+    <a href="https://github.com/LarissaMortadela"><img class="logo" src="github.png" alt="github"></a>
+    <a href="https://instagram.com/cms.lari"><img class="logo" src="instagram.png" alt="instagram"></a>
     <img class="logo" src="whatsapp.png" alt="whatsapp">
   </div>
+  <div class="estudante-div"> 
+    <img class= "estudante-imagem" src="images.jpg" alt="foto estudante">
+    <h3 class="estudante-nome">Gato 2</h3>
+    <a href="https://github.com/LarissaMortadela"><img class="logo" src="github.png" alt="github"></a>
+    <a href="https://instagram.com/cms.lari"><img class="logo" src="instagram.png" alt="instagram"></a>
+    <img class="logo" src="whatsapp.png" alt="whatsapp">
+  </div>
+  <div class="estudante-div"> 
+    <img class= "estudante-imagem" src="images.jpg" alt="foto estudante">
+    <h3 class="estudante-nome">Gato 3</h3>
+    <a href="https://github.com/LarissaMortadela"><img class="logo" src="github.png" alt="github"></a>
+    <a href="https://instagram.com/cms.lari"><img class="logo" src="instagram.png" alt="instagram"></a>
+    <img class="logo" src="whatsapp.png" alt="whatsapp">
+  </div>
+  <span></span>
+  <span></span>
+  <div class="estudante-div"> 
+    <img class= "estudante-imagem" src="images.jpg" alt="foto estudante">
+    <h3 class="estudante-nome">Gato 4</h3>
+    <a href="https://github.com/LarissaMortadela"><img class="logo" src="github.png" alt="github"></a>
+    <a href="https://instagram.com/cms.lari"><img class="logo" src="instagram.png" alt="instagram"></a>
+    <img class="logo" src="whatsapp.png" alt="whatsapp">
+  </div>
+  <div class="estudante-div"> 
+    <img class= "estudante-imagem" src="images.jpg" alt="foto estudante">
+    <h3 class="estudante-nome">Gato 5</h3>
+    <a href="https://github.com/LarissaMortadela"><img class="logo" src="github.png" alt="github"></a>
+    <a href="https://instagram.com/cms.lari"><img class="logo" src="instagram.png" alt="instagram"></a>
+    <img class="logo" src="whatsapp.png" alt="whatsapp">
+  </div>
+  <div class="estudante-div"> 
+    <img class= "estudante-imagem" src="images.jpg" alt="foto estudante">
+    <h3 class="estudante-nome">Gato 6</h3>
+    <a href="https://github.com/LarissaMortadela"><img class="logo" src="github.png" alt="github"></a>
+    <a href="https://instagram.com/cms.lari"><img class="logo" src="instagram.png" alt="instagram"></a>
+    <img class="logo" src="whatsapp.png" alt="whatsapp">
+  </div>
+</div>
 </SEction>
+<footer class="rodapé">
+  <img class="rodapé-imagem" src="alurastart logo.png" alt="logo da alura">
+</footer>
 </body>
 </html>
